# cAIre

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: config.py  test.py
src/notebooks/: qdrant_db.ipynb
src/static/: style.css
src/templates/: index.html
