[tool.poetry]
name = "test-llm-project"
version = "0.1.0"
description = "Test porject to crete a llm model"
authors = ["edugonzaloalmorox <eduardogonzaloalmorox@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
requests = "^2.31.0"
langchain = "^0.0.184"
openai = "^0.28.0"
tiktoken = "^0.4.0"
pandas = "^2.1.0"
sentence-transformers = "^2.2.2"
torch = "^2.0.1"
tqdm = "^4.66.1"
numpy = "^1.25.2"
fastapi = "^0.103.2"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
ipykernel = "^6.25.2"
jinja2 = "^3.1.2"
html5 = "^0.0.9"
litestar = "^2.0.1"
streamlit = "^1.26.0"
quart = "^0.19.3"
qdrant-client = "^1.6.3"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
